--- a/themes/consumernotebook/static/css/main.css
+++ b/themes/consumernotebook/static/css/main.css
@@ -39,7 +39,7 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 400;
 	line-height: 1.1;
 	margin-bottom: .8em;
-    font-family: 'Yanone Kaffeesatz', arial, serif;
+    font-family: 'Voces', 'Helvetica Neue', Helvetica, Arial, serif;
 }
 
 h3, h4, h5, h6 { margin-top: .8em; }
@@ -157,7 +157,6 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 		font-weight: bold;
 		margin: 0 0 .6em .2em;
 		text-decoration: none;
-		width: 427px;
 	}
 	#banner h1 a:hover, #banner h1 a:active {
 		background: none;
@@ -348,9 +347,6 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 li:last-child .hentry, #content > .hentry {border: 0; margin: 0;}
 #content > .hentry {padding: 1em 0;}
 .hentry img{display : none ;}
-.entry-title {font-size: 3em; margin-bottom: 10px; margin-top: 0;}
-.entry-title a:link, .entry-title a:visited {text-decoration: none; color: #333;}
-.entry-title a:visited {background-color: #fff;}
 
 .hentry .post-info * {font-style: normal;}
 
