--- a/themes/consumernotebook/static/css/main.css
+++ b/themes/consumernotebook/static/css/main.css
@@ -28,14 +28,14 @@ body {
 
 
 /* Headings */
-h1 {font-size: 2em }
+h1 {font-size: 1.9em;font-family:'Helvetica Neue', Helvetica, Arial, serif;}
 h2 {font-size: 1.571em}	/* 22px */
 h3 {font-size: 1.429em}	/* 20px */
 h4 {font-size: 1.286em}	/* 18px */
 h5 {font-size: 1.143em}	/* 16px */
 h6 {font-size: 1em}		/* 14px */
 
-h1, h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6 {
 	font-weight: 400;
 	line-height: 1.1;
 	margin-bottom: .8em;
@@ -150,7 +150,6 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 }
 
 	/* Banner */
-	#banner h1 {font-size: 3.571em; line-height: 0;}
 	#banner h1 a:link, #banner h1 a:visited {
 		color: #000305;
 		display: block;
